Update cortometraje 2.0 index.html
nada

--- a/cortometrajeindex.html
+++ b/cortometrajeindex.html
@@ -18,7 +18,7 @@
 <p>esto solo es una pequeña prueba de mis habilidades como programador y para esto solo me tomo un poco de tiempo asi que sera mejor no opinar andes de estra informado</p><h3>
 </marquee>
 
-<video src="C:\Users\mined\Desktop\cortometraje\cortometraje.mp4.mp4" controls></video>
+<video src="C:\Users\mined\Desktop\cortometraje\cortometraje 2.0.mp4" controls></video>
 
 
 <font size=5>
