--- a/cortometrajeindex.html
+++ b/cortometrajeindex.html
@@ -2,7 +2,7 @@
 <head>
 <title>cortometraje o video</title>
 </head><center>
-<body background="C:\Users\mined\Desktop\cortometraje\pngtree-plant-palm-leaf-simple-background-picture-image_1325702.jpg" width=25000 height=25000><font color=white><font face=cambria>
+<body background=https://github.com/Nantendowhy/proyecto-de-software/blob/main/pngtree-plant-palm-leaf-simple-background-picture-image_1325702.jpg><font color=white><font face=cambria>
 <center>
 <marquee scrollamount=45 behavior=slide>
 <h1>Algunos de los Animales mas raros del Mundo</h1>
@@ -18,7 +18,7 @@
 <p>esto solo es una pequeña prueba de mis habilidades como programador y para esto solo me tomo un poco de tiempo asi que sera mejor no opinar andes de estra informado</p><h3>
 </marquee>
 
-<video src="C:\Users\mined\Desktop\cortometraje\cortometraje 2.0.mp4" controls></video>
+<video src=https://github.com/Nantendowhy/proyecto-de-software/blob/main/cortometraje%202.0.mp4 controls></video>
 
 
 <font size=5>
